--- a/stylesheets/less/footer.less
+++ b/stylesheets/less/footer.less
@@ -81,8 +81,9 @@
 	overflow: hidden;
 	bottom: 0;
 	z-index: 99999;
-	padding:5px 0;
+	padding:0;
 	.widget {
+		padding:5px 0;
 		float:left;
 		margin-right:20px;
 		width:190px;
