--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -251,12 +251,28 @@ hr {
 
 .pagination {
 	margin:@row-height 0;
+	.next, .previous {
+		a {
+			display:block;
+			text-decoration:none; background:@color_light; padding:4px 6px 3px 6px; color:@color_off_black; border-radius:2px;
+			margin-top:@row-height;
+			font-size:14px;
+			line-height:20px
+		}	
+		a:hover {
+			background:@color_midtone; color:@color_highlight;
+		}
+	}
+	.previous {
+		text-align:right;
+	}
+	
 }
 
 a.button {
 	.drop-shadow(0px, 0px, 6px, rgba(18, 7, 6,0.4));
 	background-color:@color_light;
-	display:block;
+	display:inline-block;
 	font-family:@serif;
 	font-style:italic;
 	color:@color_midtone !important;
