More tweaks to styles. functions.php has some extra tricks up its sleeve.

--- a/stylesheets/css/colorbox.css
+++ b/stylesheets/css/colorbox.css
@@ -110,9 +110,7 @@
   height: 20px;
   text-indent: -9999px;
 }
-#cboxLoadingGraphic {
-  background: url(images/loading.gif) center center no-repeat;
-}
+/*#cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}*/
 #cboxClose {
   position: absolute;
   bottom: 5px;
