--- a/stylesheets/less/colorbox.less
+++ b/stylesheets/less/colorbox.less
@@ -49,7 +49,7 @@
 			text-indent:-9999px;
 		}
         #cboxNext.hover{ }	
-        #cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}
+        /*#cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}*/
         #cboxClose {
 			position:absolute; 
 			bottom:5px; 
