--- a/stylesheets/css/single_snippet.css
+++ b/stylesheets/css/single_snippet.css
@@ -8,57 +8,19 @@
 .show-bounds {
   background-color: rgba(255, 255, 0, 0.5);
 }
-#content.snippet .article_header {
-  margin-bottom: 0;
-  width: 100%;
-  /*tweak for clearfix*/
-
+#content.snippet article {
+  margin-bottom: 60px;
 }
-#content.snippet .article_header .date {
-  float: right;
-  margin: 0;
+#content.snippet article section {
   margin-top: 30px;
-  line-height: 10px;
-  padding: 0;
-  font-size: 12px;
 }
-#content.snippet h2 {
-  padding-top: 0px;
-  margin-left: 70px;
-  margin-bottom: 0;
-  width: 40px;
-  height: 40px;
-  float: left;
+#content.snippet article section p {
+  font-size: 39px;
+  line-height: 45px;
 }
-#content.snippet h2 a {
-  display: block;
-  width: 40px;
-  height: 40px;
-  text-indent: -9999px;
-  border: 0;
+#content.snippet article section .tag {
+  background: none;
 }
-#content.snippet .entry {
-  padding-bottom: 20px;
-  padding-top: 40px;
-}
-#content.snippet .follow {
-  font-size: 14px;
-  font-style: italic;
-  padding-top: 4px;
-}
-#content.snippet.delicious .entry .link {
-  padding-top: 2px;
-  font-size: 22px;
-}
-#content.snippet.delicious .entry p {
-  font-size: 16px;
-  padding-top: 4px;
-}
-#content.snippet.twitter .entry p {
-  font-size: 22px;
-  padding: 0;
-  margin: 0;
-  margin-bottom: -7px;
-  margin-top: -8px;
-  line-height: 40px;
+#content.snippet article section .tag:hover {
+  color: #050000;
 }
