--- a/stylesheets/less/sprites.less
+++ b/stylesheets/less/sprites.less
@@ -33,3 +33,70 @@
 	height:30px;
 	.sprite-background(-240px, -200px);
 }
+
+.sprite.vimeo-light-50 {
+	width:50px;
+	height:43px;
+	.sprite-background(0px, -30px);
+}
+.sprite.twitter-light-50 {
+	width:37px;
+	height:50px;
+	.sprite-background(-70px, -30px);
+}
+.sprite.tumblr-light-50 {
+	width:31px;
+	height:50px;
+	.sprite-background(-130px, -30px);
+}
+.sprite.facebook-light-50 {
+	width:23px;
+	height:50px;
+	.sprite-background(-240px, -30px);
+}
+.sprite.flickr-light-50 {
+	width:50px;
+	height:25px;
+	.sprite-background(-180px, -200px);
+}
+.sprite.git-light-50 {
+	width:46px;
+	height:50px;
+	.sprite-background(-290px, -200px);
+}
+
+.sprite.vimeo-light-30 {
+	width:30px;
+	height:26px;
+	.sprite-background(0px, -300px);
+}
+.sprite.twitter-light-30 {
+	width:23px;
+	height:30px;
+	.sprite-background(-60px, -300px);
+}
+.sprite.tumblr-light-30 {
+	width:19px;
+	height:30px;
+	.sprite-background(-110px, -300px);
+}
+.sprite.facebook-light-30 {
+	width:14px;
+	height:30px;
+	.sprite-background(-150px, -300px);
+}
+.sprite.flickr-light-30 {
+	width:30px;
+	height:15px;
+	.sprite-background(-190px, -300px);
+}
+.sprite.git-light-30 {
+	width:28px;
+	height:30px;
+	.sprite-background(-240px, -300px);
+}
+.sprite.rss-light-30 {
+	width:30px;
+	height:30px;
+	.sprite-background(-290px, -300px);
+}
