--- a/stylesheets/css/sprites.css
+++ b/stylesheets/css/sprites.css
@@ -53,3 +53,94 @@
   background-position: -240px -200px;
   background-repeat: no-repeat;
 }
+.sprite.vimeo-light-50 {
+  width: 50px;
+  height: 43px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: 0px -30px;
+  background-repeat: no-repeat;
+}
+.sprite.twitter-light-50 {
+  width: 37px;
+  height: 50px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -70px -30px;
+  background-repeat: no-repeat;
+}
+.sprite.tumblr-light-50 {
+  width: 31px;
+  height: 50px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -130px -30px;
+  background-repeat: no-repeat;
+}
+.sprite.facebook-light-50 {
+  width: 23px;
+  height: 50px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -240px -30px;
+  background-repeat: no-repeat;
+}
+.sprite.flickr-light-50 {
+  width: 50px;
+  height: 25px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -180px -200px;
+  background-repeat: no-repeat;
+}
+.sprite.git-light-50 {
+  width: 46px;
+  height: 50px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -290px -200px;
+  background-repeat: no-repeat;
+}
+.sprite.vimeo-light-30 {
+  width: 30px;
+  height: 26px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: 0px -300px;
+  background-repeat: no-repeat;
+}
+.sprite.twitter-light-30 {
+  width: 23px;
+  height: 30px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -60px -300px;
+  background-repeat: no-repeat;
+}
+.sprite.tumblr-light-30 {
+  width: 19px;
+  height: 30px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -110px -300px;
+  background-repeat: no-repeat;
+}
+.sprite.facebook-light-30 {
+  width: 14px;
+  height: 30px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -150px -300px;
+  background-repeat: no-repeat;
+}
+.sprite.flickr-light-30 {
+  width: 30px;
+  height: 15px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -190px -300px;
+  background-repeat: no-repeat;
+}
+.sprite.git-light-30 {
+  width: 28px;
+  height: 30px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -240px -300px;
+  background-repeat: no-repeat;
+}
+.sprite.rss-light-30 {
+  width: 30px;
+  height: 30px;
+  background-image: url(../../images/fs_sprite.png);
+  background-position: -290px -300px;
+  background-repeat: no-repeat;
+}
