--- a/stylesheets/less/srd.less
+++ b/stylesheets/less/srd.less
@@ -81,48 +81,93 @@
 			}
 		}
 		#follow_list {
-			background:rgba(255,30,0,.8);
+			background:rgba(255,30,0,.9);
 			position:absolute;
 			z-index:999999;
 			right:0;
 			height:0;
-			padding-left:20px;
 			top:@row-height;
 			overflow:hidden;
-			ul {
+			#follow_intro {
+				padding-left:20px;
 				margin-top:@row-height;
+				font-size:13px;
+				color:@color_highlight;
+			}
+			
+			ul {
 				display:block;
 				li {
 					width:auto;
 					.reset-dimensions;
 					display:block;
 					float:none;
-					margin-bottom:@row-height;
+					
 					a {
-						
-						/*temporary*/
-						background: url(http://placehold.it/50x50) no-repeat;
-						
-						padding-left:70px;
+						padding:5px 0;
+						padding-left:20px;
+						background:none;
+						display:block;
+						.icon {
+							width:50px;
+							height:40px;
+							display:block;
+							float:left;
+							margin-right:20px;
+							margin-top:2px;
+						}
 						display:block;
 						height:auto;
 						width:auto;
+						.content {
+							float:left;
+						}					
 						.header {
 							font-size:22px;
-							line-height:@row-height*2;
+							line-height:@row-height;
 							font-weight:normal;
+							.reset-dimensions;
+							display:block;
+							margin-top:5px;
+							margin-bottom:5px;
 						}
 						.description {
 							display:block;
 							font-weight:@normal;
+							font-family:@serif;
+							font-style:italic;
+							
 						}
+					}
+					a:hover {
+						background-color:rgba(255,255,255,.25);
+					}
+				}
+				#link_follow_rss {
+					.sprite {
+						margin-left:10px;
+						margin-top:5px;
+					}
+				}
+				
+				#link_follow_twitter {
+					.sprite {
+						margin-left:12px;
+						margin-top:5px;
+					}
+				}
+				
+				#link_follow_tumblr {
+					.sprite {
+						margin-left:15px;
+						margin-top:5px;
 					}
 				}
 			}
 		}
 		
 		#follow_list.expanded {
-			height:150px;
+			height:210px;
 		}
 
 		#work_pullout {
